feat(torrents): support new share limit parameters
